--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
+        <!--查看Class的头信息-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+        </dependency>
     </dependencies>
 
 </project>
